# stitch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  events_linux.cpp  events_linux.h  signal.h  signal_linux.cpp  timer.h  timer_linux.cpp
.github/workflows/: test.yml
common/: mpmc_journal_queue.hpp  mpmc_x_queue.hpp  mpsc_journal_queue.hpp  queue.hpp  spsc_queue.hpp  stream_gen.hpp  streams.hpp
concurrency/: atom_spmc.h  events.h  file.h  hazard_pointer.cpp  hazard_pointers.h  lockfree_set.h  mpmc_journal_queue.hpp  mpmc_queue.h  mpmc_queue.hpp  mpsc_journal_queue.hpp  mpsc_queue.h  mpsc_queue.hpp  ports.h  queue.h  spsc_queue.h  spsc_queue.hpp  streams.h  streams.hpp
concurrency/linux/: events.cpp  events.h  file.cpp  file_event.cpp  file_event.h  rt_stream.h  signal.cpp  signal.h  timer.cpp  timer.h  utils.h  waiter.cpp  waiter.h
data_structs/: hazard_pointer.cpp  hazard_pointers.h  lockfree_set.h
doc/: CMakeLists.txt  conf.py  doxy-config  doxy-input  index.rst
doc/examples/: event-reactor.cpp  states.cpp  stream-events.cpp  stream-work.cpp
doc/pages/: connections.md  examples.md  main.md  namespace-stitch.md
doc/queues/: intro.rst  spsc_queue.rst
experimental/: variable.h
interface/: events.h  file.h
linux/: channel.h  events.cpp  events.h  events_linux.h  file.cpp  file.h  file_event.cpp  file_event.h  rt_stream.h  signal.cpp  signal.h  stream.h  timer.cpp  timer.h  waiter.cpp
stitch/: atom.h  atom_spmc.h  connections.h  hazard_pointer.cpp  hazard_pointers.cpp  hazard_pointers.h  lockfree_set.h  mpmc_queue.h  mpsc_queue.h  multiset.h  notice.h  ports.h  queue.h  queue_mpmc_lockfree.h  queue_mpmc_waitfree.h  queue_mpsc_waitfree.h  queue_spsc_waitfree.h  signal.h  spsc_queue.h  state.h  streams.h  timer.h
stitch/linux/: events.cpp  events.h  file.cpp  file.h  file_event.h  signal.cpp  signal.h  timer.cpp  timer.h
tests/: CMakeLists.txt  channel_test.cpp  file_test.cpp  mpmc_journal_queue_test.cpp  rt_stream_test.cpp  signal_test.cpp  stream_test.cpp  test.cpp  test_atom.cpp  test_atom_spmc.cpp  test_connections.cpp  test_event_reactor.cpp  test_experimental.cpp  test_file.cpp  test_hazard_pointers.cpp  test_lockfree_set.cpp  test_mpmc_journal_queue.cpp  test_mpmc_queue.cpp  test_mpsc_journal_queue.cpp  test_mpsc_queue.cpp  test_multiset.cpp  test_notice.cpp  test_ports.cpp  test_queue_mpmc_lockfree.cpp  test_queue_mpmc_waitfree.cpp  test_queue_mpsc_waitfree.cpp  test_queue_spsc_waitfree.cpp  test_signal.cpp  test_spsc_queue.cpp  test_state.cpp  test_stream_gen.cpp  test_streams.cpp  test_timer.cpp  test_variable.cpp  timer_test.cpp  utils.cpp  utils.h  waiter_test.cpp
